--- a/UnrealGame/Group4Game/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UnrealGame/Group4Game/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -235,7 +235,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/TopDown/Maps/TopDownMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -627,6 +627,300 @@ BP_PhysDoor_C.WorldPartition=True
 BP_PhysDoor_C.Input=True
 BP_PhysDoor_C.Actor=True
 BP_TopDownGameMode_C.Default=True
+EditorStyleSettings.Theme=False
+EditorStyleSettings.UserInterface=True
+EditorStyleSettings.Accessibility=True
+EditorStyleSettings.Graphs=True
+AudioEditorSettings.AssetMenu=True
+BlueprintEditorSettings.Workflow=True
+BlueprintEditorSettings.VisualStyle=True
+BlueprintEditorSettings.Compiler=True
+BlueprintEditorSettings.DeveloperTools=True
+BlueprintEditorSettings.Performance=True
+BlueprintEditorSettings.Play=True
+CollectionSettings.Collections=True
+EnhancedInputEditorSettings.Logging=True
+EnhancedInputEditorSettings.Editor=True
+EnhancedInputEditorSettings.Blueprints=True
+EditorExperimentalSettings.Performance=True
+EditorExperimentalSettings.HDR=True
+EditorExperimentalSettings.Foliage=True
+EditorExperimentalSettings.Tools=True
+EditorExperimentalSettings.UserInterface=True
+EditorExperimentalSettings.Blueprints=True
+EditorExperimentalSettings.Cooking=True
+EditorExperimentalSettings.PIE=True
+EditorExperimentalSettings.LightingBuilds=True
+EditorExperimentalSettings.Core=True
+EditorExperimentalSettings.Materials=True
+EditorExperimentalSettings.Content Browser=True
+EditorExperimentalSettings.Level=True
+EditorExperimentalSettings.WorldPartition=True
+EditorSettings.DerivedDataCache=True
+EditorSettings.Derived Data Cache Notifications=True
+EditorSettings.Derived Data Cache S3=True
+EditorKeyboardShortcutSettings.AdvancedPreviewScene=True
+EditorKeyboardShortcutSettings.AnimGraph=True
+EditorKeyboardShortcutSettings.AnimSequenceCurveEditor=True
+EditorKeyboardShortcutSettings.AssetEditor=True
+EditorKeyboardShortcutSettings.AssetManagerEditorCommands=True
+EditorKeyboardShortcutSettings.BlueprintDebugger=True
+EditorKeyboardShortcutSettings.CameraShakePreviewer=True
+EditorKeyboardShortcutSettings.ChaosCacheEditor=True
+EditorKeyboardShortcutSettings.ClothPainterTools=True
+EditorKeyboardShortcutSettings.ClothPainter=True
+EditorKeyboardShortcutSettings.TakeRecorderSources=True
+EditorKeyboardShortcutSettings.GenericCommands=True
+EditorKeyboardShortcutSettings.EditorViewport=True
+EditorKeyboardShortcutSettings.ContentBrowser=True
+EditorKeyboardShortcutSettings.GenericCurveEditor=True
+EditorKeyboardShortcutSettings.CurveEditorTools=True
+EditorKeyboardShortcutSettings.DerivedDataSettings=True
+EditorKeyboardShortcutSettings.TabCommands=True
+EditorKeyboardShortcutSettings.RigVMExecutionStack=True
+EditorKeyboardShortcutSettings.FoliageEditMode=True
+EditorKeyboardShortcutSettings.FractureEditor=True
+EditorKeyboardShortcutSettings.GeometryCollectionSelection=True
+EditorKeyboardShortcutSettings.GPUSkinCacheVisualizationMenu=True
+EditorKeyboardShortcutSettings.GraphEditor=True
+EditorKeyboardShortcutSettings.NiagaraHierarchyEditorCommands=True
+EditorKeyboardShortcutSettings.IKRetarget=True
+EditorKeyboardShortcutSettings.IKRig=True
+EditorKeyboardShortcutSettings.IKRigSkeleton=True
+EditorKeyboardShortcutSettings.InsightsCommands=True
+EditorKeyboardShortcutSettings.LoadingProfilerCommands=True
+EditorKeyboardShortcutSettings.MemoryProfilerCommands=True
+EditorKeyboardShortcutSettings.NetworkingProfilerCommands=True
+EditorKeyboardShortcutSettings.TimingProfilerCommands=True
+EditorKeyboardShortcutSettings.InsightsStatusBarWidgetCommands=True
+EditorKeyboardShortcutSettings.LandscapeEditor=True
+EditorKeyboardShortcutSettings.LayersView=True
+EditorKeyboardShortcutSettings.LevelEditor=True
+EditorKeyboardShortcutSettings.LevelEditorModes=True
+EditorKeyboardShortcutSettings.LevelInstanceEditorMode=True
+EditorKeyboardShortcutSettings.LevelSequenceEditor=True
+EditorKeyboardShortcutSettings.LevelViewport=True
+EditorKeyboardShortcutSettings.LightActor=True
+EditorKeyboardShortcutSettings.LumenVisualizationMenu=True
+EditorKeyboardShortcutSettings.MainFrame=True
+EditorKeyboardShortcutSettings.MaterialEditor=True
+EditorKeyboardShortcutSettings.MediaPlateEditor=True
+EditorKeyboardShortcutSettings.MediaPlayerEditor=True
+EditorKeyboardShortcutSettings.MeshPainter=True
+EditorKeyboardShortcutSettings.MeshPaint=True
+EditorKeyboardShortcutSettings.MeshPaintingTools=True
+EditorKeyboardShortcutSettings.ModelingToolsManagerCommands=True
+EditorKeyboardShortcutSettings.ModelingModeCommands=True
+EditorKeyboardShortcutSettings.ModelingToolsMeshAttributePaintTool=True
+EditorKeyboardShortcutSettings.ModelingToolsCubeGridTool=True
+EditorKeyboardShortcutSettings.ModelingToolsDrawPolygonTool=True
+EditorKeyboardShortcutSettings.ModelingToolsDrawAndRevolveTool=True
+EditorKeyboardShortcutSettings.ModelingToolsEditMeshMaterials=True
+EditorKeyboardShortcutSettings.ModelingToolsEditMeshPolygonsTool=True
+EditorKeyboardShortcutSettings.ModelingToolsMeshGroupPaintTool=True
+EditorKeyboardShortcutSettings.ModelingToolsMeshPlaneCutTool=True
+EditorKeyboardShortcutSettings.ModelingToolsMeshSelectionTool=True
+EditorKeyboardShortcutSettings.ModelingToolsSculptTool=True
+EditorKeyboardShortcutSettings.ModelingToolsEditMode=True
+EditorKeyboardShortcutSettings.ModelingToolsTransformTool=True
+EditorKeyboardShortcutSettings.ModelingToolsMeshVertexPaintTool=True
+EditorKeyboardShortcutSettings.ModelingToolsVertexSculptTool=True
+EditorKeyboardShortcutSettings.NaniteVisualizationMenu=True
+EditorKeyboardShortcutSettings.NiagaraEditor=True
+EditorKeyboardShortcutSettings.PersonaCommon=True
+EditorKeyboardShortcutSettings.PlayWorld=True
+EditorKeyboardShortcutSettings.RayTracingDebugVisualizationMenu=True
+EditorKeyboardShortcutSettings.VisualizationMenu=True
+EditorKeyboardShortcutSettings.SourceControl=True
+EditorKeyboardShortcutSettings.ControlRigEditMode=True
+EditorKeyboardShortcutSettings.ControlRigBlueprint=True
+EditorKeyboardShortcutSettings.ControlRigHierarchy=True
+EditorKeyboardShortcutSettings.RigVMBlueprint=True
+EditorKeyboardShortcutSettings.SequenceRecorder.Common=True
+EditorKeyboardShortcutSettings.Sequencer=True
+EditorKeyboardShortcutSettings.ShowFlagsMenu=True
+EditorKeyboardShortcutSettings.SplineComponentVisualizer=True
+EditorKeyboardShortcutSettings.StandardToolCommands=True
+EditorKeyboardShortcutSettings.SystemWideCommands=True
+EditorKeyboardShortcutSettings.TakeRecorder=True
+EditorKeyboardShortcutSettings.WidgetDesigner=True
+EditorKeyboardShortcutSettings.UVEditor=True
+EditorKeyboardShortcutSettings.FVariantManagerEditorCommands=True
+EditorKeyboardShortcutSettings.EditorViewportClient=True
+EditorKeyboardShortcutSettings.VirtualShadowMapVisualizationMenu=True
+EditorKeyboardShortcutSettings.VisualLogger=True
+LiveCodingSettings.General=True
+LiveCodingSettings.Modules=True
+EditorLoadingSavingSettings.Startup=True
+EditorLoadingSavingSettings.AutoReimport=True
+EditorLoadingSavingSettings.Blueprints=True
+EditorLoadingSavingSettings.AutoSave=True
+EditorLoadingSavingSettings.SourceControl=True
+EditorPerProjectUserSettings.DeveloperTools=True
+EditorPerProjectUserSettings.AI=True
+EditorPerProjectUserSettings.SimplygonSwarm=True
+EditorPerProjectUserSettings.HotReload=True
+EditorPerProjectUserSettings.Import=True
+EditorPerProjectUserSettings.Export=True
+EditorPerProjectUserSettings.UnrealAutomationTool=True
+OutputLogSettings.Output Log=True
+EditorPerformanceSettings.EditorPerformance=True
+EditorPerformanceSettings.ViewportResolution=True
+InternationalizationSettingsModel.Internationalization=True
+InternationalizationSettingsModel.Time=True
+SourceCodeAccessSettings.Accessor=True
+TextureEncodingUserSettings.EncodeSpeeds=True
+VRModeSettings.General=True
+VRModeSettings.Cinematics=True
+VRModeSettings.World Movement=True
+VRModeSettings.UI Customization=True
+VRModeSettings.Motion Controllers=True
+WorldPartitionEditorSettings.MapConversion=True
+WorldPartitionEditorSettings.Foliage=True
+WorldPartitionEditorSettings.MiniMap=True
+WorldPartitionEditorSettings.WorldPartition=True
+LevelEditorMiscSettings.Editing=True
+LevelEditorMiscSettings.Sound=True
+LevelEditorMiscSettings.Levels=True
+LevelEditorMiscSettings.Screenshots=True
+LevelEditorPlaySettings.PlayInEditor=True
+LevelEditorPlaySettings.GameViewportSettings=True
+LevelEditorPlaySettings.PlayInNewWindow=True
+LevelEditorPlaySettings.PlayInStandaloneGame=True
+LevelEditorPlaySettings.Multiplayer Options=True
+LevelEditorPlaySettings.PlayOnDevice=True
+OnlinePIESettings.Logins=True
+LevelEditorViewportSettings.Controls=True
+LevelEditorViewportSettings.LookAndFeel=True
+LevelEditorViewportSettings.GridSnapping=True
+LevelEditorViewportSettings.Preview=True
+LevelEditorViewportSettings.Behavior=True
+AnimationBlueprintEditorSettings.Debugging=True
+AnimationBlueprintEditorSettings.Graphs=True
+PersonaOptions.Preview Scene=True
+PersonaOptions.Assets=True
+PersonaOptions.Viewport=True
+PersonaOptions.Audio=True
+PersonaOptions.Composites and Montages=True
+PersonaOptions.Skeleton Tree=True
+PersonaOptions.Mesh=True
+PersonaOptions.Asset Browser=True
+PersonaOptions.Timeline=True
+ContentBrowserSettings.ContentBrowser=True
+ControlRigEditorSettings.Interaction=True
+ControlRigEditorSettings.Compilation=True
+ControlRigEditorSettings.NodeGraph=True
+ControlRigEditorSettings.Viewport=True
+ControlRigEditorSettings.Hierarchy=True
+CurveEditorSettings.Curve Editor=True
+SequencerSettings.Keyframing=True
+SequencerSettings.General=True
+SequencerSettings.Timeline=True
+SequencerSettings.Snapping=True
+SequencerSettings.CurveEditor=True
+SequencerSettings.Playback=True
+FlipbookEditorSettings.Background=True
+GraphEditorSettings.GeneralStyle=True
+GraphEditorSettings.Splines=True
+GraphEditorSettings.PinColors=True
+GraphEditorSettings.NodeTitleColors=True
+GraphEditorSettings.Tracing=True
+GraphEditorSettings.ContextMenu=True
+GraphEditorSettings.CommentNodes=True
+LevelInstanceEditorPerProjectUserSettings.Create=True
+LevelInstanceEditorPerProjectUserSettings.Pivot=True
+MeshPaintSettings.Visualization=True
+MetasoundEditorSettings.AssetMenu=True
+MetasoundEditorSettings.General=True
+MetasoundEditorSettings.PinColors=True
+MetasoundEditorSettings.NodeTitleColors=True
+MetasoundEditorSettings.GraphAnimation=True
+RigVMEditorSettings.Interaction=True
+SkeletalMeshEditorSettings.AnimationPreview=True
+SpriteEditorSettings.Background=True
+TakeRecorderUserSettings.User Settings=True
+TileMapEditorSettings.Background=True
+TileMapEditorSettings.Grid=True
+TileSetEditorSettings.Background=True
+TileSetEditorSettings.Tile Editor=True
+TileSetEditorSettings.Tile Sheet Conditioning=True
+WidgetDesignerSettings.GridSnapping=True
+WidgetDesignerSettings.Dragging=True
+WidgetDesignerSettings.Visuals=True
+WidgetDesignerSettings.Interaction=True
+BlueprintHeaderViewSettings.Settings=True
+FractureModeCustomizationSettings.Fracture Mode=True
+LightMixerEditorSettings.Light Mixer=True
+ModelingToolsModeCustomizationSettings.Modeling Mode=True
+ModelingComponentsEditorSettings.Modeling Tools=True
+ObjectMixerEditorSettings.Object Mixer=True
+PythonScriptPluginUserSettings.Python=True
+CrashReportsPrivacySettings.Options=True
+AnalyticsPrivacySettings.Options=True
+AutomationTestSettings.Loading=True
+AutomationTestSettings.Automation=True
+AutomationTestSettings.Open Asset Tests=True
+AutomationTestSettings.PIE Test Maps=True
+AutomationTestSettings.Play all project Maps In PIE=True
+AutomationTestSettings.MiscAutomationSetups=True
+AutomationTestSettings.ExternalTools=True
+AutomationTestSettings.Screenshots=True
+CrashReporterSettings.CrashReporter=True
+DataValidationSettings.Validation Scenarios=True
+GameplayDebuggerUserSettings.GameplayDebugger=True
+GameplayTagsDeveloperSettings.GameplayTags=True
+LogVisualizerSettings.VisualLogger=True
+enimiy_C.TransformCommon=True
+enimiy_C.Animation=True
+enimiy_C.Mesh=True
+enimiy_C.Default=True
+enimiy_C.Physics=True
+enimiy_C.Collision=True
+enimiy_C.Lighting=True
+enimiy_C.Clothing=True
+enimiy_C.LeaderPoseComponent=True
+enimiy_C.AnimationRig=True
+enimiy_C.Deformer=True
+enimiy_C.SkinWeights=True
+enimiy_C.Rendering=True
+enimiy_C.HLOD=True
+enimiy_C.PathTracing=True
+enimiy_C.Mobile=True
+enimiy_C.Navigation=True
+enimiy_C.RayTracing=True
+enimiy_C.VirtualTexture=True
+enimiy_C.Tags=True
+enimiy_C.AssetUserData=True
+enimiy_C.Activation=True
+enimiy_C.Cooking=True
+enimiy_C.Character Movement (General Settings)=True
+enimiy_C.Character Movement: Walking=True
+enimiy_C.Character Movement: Jumping / Falling=True
+enimiy_C.Character Movement: Gravity=True
+enimiy_C.Character Movement (Networking)=True
+enimiy_C.Character Movement: Swimming=True
+enimiy_C.Character Movement: Flying=True
+enimiy_C.Character Movement: Custom Movement=True
+enimiy_C.Character Movement (Rotation Settings)=True
+enimiy_C.Character Movement: Physics Interaction=True
+enimiy_C.Character Movement=True
+enimiy_C.Character Movement: Avoidance=True
+enimiy_C.RootMotion=True
+enimiy_C.Character Movement: NavMesh Movement=True
+enimiy_C.NavMovement=True
+enimiy_C.Velocity=True
+enimiy_C.PlanarMovement=True
+enimiy_C.MovementComponent=True
+enimiy_C.Shape=True
+enimiy_C.Character=True
+enimiy_C.Camera=True
+enimiy_C.Pawn=True
+enimiy_C.Replication=True
+enimiy_C.Networking=True
+enimiy_C.WorldPartition=True
+enimiy_C.Input=True
+enimiy_C.Actor=True
+enimiy_C.Materials=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/Door/BP_PhysDoor.BP_PhysDoor;
@@ -648,8 +942,8 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/TopDown/Maps/TopDownMap.TopDownMap", ()))
 
 [RootWindow]
-ScreenPosition=X=209.333 Y=145.333
-WindowSize=X=1284.000 Y=724.000
+ScreenPosition=X=2135.000 Y=92.000
+WindowSize=X=1282.000 Y=722.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1883,6 +2177,9 @@ NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 WB_GameUI_C=
+EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoSave\" \"Object.Blueprints\" "
+CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
+AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/Menus/WB_PauseMenu.WB_PauseMenu=1
@@ -1959,4 +2256,7 @@ MRUItem1=/Game/TopDown/Maps/TopDownMap
 
 [DetailCategoriesAdvanced]
 TextBlock.Behavior=True
+
+[DetailMultiObjectNodeExpansion]
+EditorStyleSettings=True
 
