--- a/UnrealGame/Group4Game/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UnrealGame/Group4Game/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -262,14 +262,13 @@ SequenceBrowser.HiddenColumns=Class
 LastLevel=/Game/TopDown/Maps/TopDownMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationBlueprintEditor
-RecentAssetEditors=
-RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
@@ -1089,8 +1088,8 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/TopDown/Maps/TopDownMap.TopDownMap", ()))
 
 [RootWindow]
-ScreenPosition=X=2135.000 Y=92.000
-WindowSize=X=1282.000 Y=722.000
+ScreenPosition=X=426.000 Y=100.000
+WindowSize=X=1284.000 Y=724.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2187,6 +2186,14 @@ HoudiniEngineEditor.TimeStamp=2024.06.27-05.26.34
 HoudiniEngineEditor.LastCompileMethod=Unknown
 SequencerWidgets.TimeStamp=2024.10.02-14.00.52
 SequencerWidgets.LastCompileMethod=Unknown
+SkeletonEditor.TimeStamp=2023.12.04-12.02.06
+SkeletonEditor.LastCompileMethod=Unknown
+PinnedCommandList.TimeStamp=2023.12.04-12.02.04
+PinnedCommandList.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2023.12.04-12.02.01
+HierarchicalLODUtilities.LastCompileMethod=Unknown
+MaterialEditor.TimeStamp=2023.12.04-12.02.02
+MaterialEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
@@ -2222,24 +2229,23 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/StarterContent/Materials/M_Basic_Wall
-MRUItem1=/Game/StarterContent/Materials/M_Basic_Floor
-MRUItem2=/Game/Characters/Enemy/enimiy
-MRUItem3=/Game/Characters/Enemy/apEnemyAI
-MRUItem4=/Game/Menus/WB_LoadMenu
+MRUItem0=/Game/Menus/WB_LoadMenu
+MRUItem1=/Game/StarterContent/Materials/M_Basic_Wall
+MRUItem2=/Game/StarterContent/Materials/M_Basic_Floor
+MRUItem3=/Game/Characters/Enemy/enimiy
+MRUItem4=/Game/Characters/Enemy/apEnemyAI
 MRUItem5=/Game/Menus/WB_SaveMenu
 MRUItem6=/Game/TopDown/Input/IMC_Default
 MRUItem7=/Game/Menus/WB_MainMenu
-MRUItem8=/Game/Menus/WB_Credits
-MRUItem9=/Game/Menus/WB_PauseMenu
-MRUItem10=/Game/TopDown/Maps/MainMenu
-MRUItem11=/Game/TopDown/Blueprints/BP_TopDownGameMode
-MRUItem12=/Game/UI/WB_GameUI
-MRUItem13=/Game/TopDown/Maps/TopDownMap
-MRUItem14=/Game/TopDown/Blueprints/BP_TopDownController
-MRUItem15=/Game/TopDown/Blueprints/BP_TopDownCharacter
-MRUItem16=/Game/Input/IA_Pause
-MRUItem17=/Game/TopDown/Input/Actions/IA_SetDestination_Touch
+MRUItem8=/Game/Menus/WB_PauseMenu
+MRUItem9=/Game/TopDown/Maps/MainMenu
+MRUItem10=/Game/TopDown/Blueprints/BP_TopDownGameMode
+MRUItem11=/Game/UI/WB_GameUI
+MRUItem12=/Game/TopDown/Maps/TopDownMap
+MRUItem13=/Game/TopDown/Blueprints/BP_TopDownController
+MRUItem14=/Game/TopDown/Blueprints/BP_TopDownCharacter
+MRUItem15=/Game/Input/IA_Pause
+MRUItem16=/Game/TopDown/Input/Actions/IA_SetDestination_Touch
 
 [UMGSequencerSettings SequencerSettings]
 AutoChangeMode=None
@@ -2341,6 +2347,7 @@ enimiy_C=
 Character=
 Pawn=
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.VirtualTexture.RuntimeVirtualTextures\" "
+MaterialOptions="\"Object.MaterialBakeSettings.Properties\" \"Object.MaterialBakeSettings.TextureSize\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/Menus/WB_PauseMenu.WB_PauseMenu=1
@@ -2358,6 +2365,7 @@ StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.VirtualText
 /Game/Characters/Enemy/enimiy.enimiy=0
 /Game/StarterContent/Materials/M_Basic_Floor.M_Basic_Floor=1
 /Game/StarterContent/Materials/M_Basic_Wall.M_Basic_Wall=1
+/Game/Menus/WB_LoadMenu.WB_LoadMenu=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
