--- a/UnrealGame/Group4Game/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UnrealGame/Group4Game/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -219,7 +219,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/StarterContent/Materials
+ContentBrowserDrawer.SelectedPaths=/Game/UI
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -262,7 +262,7 @@ SequenceBrowser.HiddenColumns=Class
 LastLevel=/Game/TopDown/Maps/TopDownMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=MaterialEditor
@@ -2229,23 +2229,24 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Menus/WB_LoadMenu
-MRUItem1=/Game/StarterContent/Materials/M_Basic_Wall
-MRUItem2=/Game/StarterContent/Materials/M_Basic_Floor
-MRUItem3=/Game/Characters/Enemy/enimiy
-MRUItem4=/Game/Characters/Enemy/apEnemyAI
-MRUItem5=/Game/Menus/WB_SaveMenu
-MRUItem6=/Game/TopDown/Input/IMC_Default
-MRUItem7=/Game/Menus/WB_MainMenu
-MRUItem8=/Game/Menus/WB_PauseMenu
-MRUItem9=/Game/TopDown/Maps/MainMenu
-MRUItem10=/Game/TopDown/Blueprints/BP_TopDownGameMode
-MRUItem11=/Game/UI/WB_GameUI
-MRUItem12=/Game/TopDown/Maps/TopDownMap
-MRUItem13=/Game/TopDown/Blueprints/BP_TopDownController
-MRUItem14=/Game/TopDown/Blueprints/BP_TopDownCharacter
-MRUItem15=/Game/Input/IA_Pause
-MRUItem16=/Game/TopDown/Input/Actions/IA_SetDestination_Touch
+MRUItem0=/Game/UI/WB_Settings
+MRUItem1=/Game/Menus/WB_LoadMenu
+MRUItem2=/Game/StarterContent/Materials/M_Basic_Wall
+MRUItem3=/Game/StarterContent/Materials/M_Basic_Floor
+MRUItem4=/Game/Characters/Enemy/enimiy
+MRUItem5=/Game/Characters/Enemy/apEnemyAI
+MRUItem6=/Game/Menus/WB_SaveMenu
+MRUItem7=/Game/TopDown/Input/IMC_Default
+MRUItem8=/Game/Menus/WB_MainMenu
+MRUItem9=/Game/Menus/WB_PauseMenu
+MRUItem10=/Game/TopDown/Maps/MainMenu
+MRUItem11=/Game/TopDown/Blueprints/BP_TopDownGameMode
+MRUItem12=/Game/UI/WB_GameUI
+MRUItem13=/Game/TopDown/Maps/TopDownMap
+MRUItem14=/Game/TopDown/Blueprints/BP_TopDownController
+MRUItem15=/Game/TopDown/Blueprints/BP_TopDownCharacter
+MRUItem16=/Game/Input/IA_Pause
+MRUItem17=/Game/TopDown/Input/Actions/IA_SetDestination_Touch
 
 [UMGSequencerSettings SequencerSettings]
 AutoChangeMode=None
